--- a/src/components/title/title.html
+++ b/src/components/title/title.html
@@ -1,1 +1,2 @@
-<img class="title" src="../../assets/dog.jpg" alt="Dog" />
+<img class="title" src="../../assets/logo.svg" alt="logo" />
+<h1>Muzic</h1>
