--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -1,5 +1,16 @@
+html {
+  font-size: 16px;
+  background-color: #383b49;
+  color: #d7d8db;
+}
+
 .title {
   border-radius: 50%;
   height: 100px;
   width: 100px;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 9px;
 }
