Style button and integrate img

--- a/src/components/play button/button-text.html
+++ b/src/components/play button/button-text.html
@@ -1,1 +1,3 @@
-<button class="btn">Play</button>
+<button class="btn flex-container">
+  <img src="../../assets/playicon.svg" alt="icon" /><span>Play</span>
+</button>
