--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,8 +1,21 @@
 .btn {
   border-radius: 20px;
-  font-size: 1.2rem;
   color: white;
-  background: #016b6b;
+  background-image: linear-gradient(180deg, #ed8770, #d9519d);
   border: none;
-  padding: 10px 20px;
+  padding: 10px 30px;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 35px 10px 35px;
+}
+
+.btn > img {
+  width: 15px;
+}
+.btn > span {
+  margin-left: 10px;
+  font-size: 0.8rem;
 }
