--- a/src/components/search/search-button-text.html
+++ b/src/components/search/search-button-text.html
@@ -1,3 +1,4 @@
-<button class="btn flex-container">
-  <img src="../../assets/playicon.svg" alt="icon" /><span>Play</span>
-</button>
+<div class="searchInput">
+  <img src="../../assets/search.svg" alt="icon" />
+  <input type="text" placeholder="Search album song" />
+</div>
