Add upades just in case

--- a/src/components/bottom_nav/bottom-nav.html
+++ b/src/components/bottom_nav/bottom-nav.html
@@ -1,4 +1,7 @@
-<div class="searchInput">
-  <img src="../../assets/setting.svg" alt="settings" />
-  <span>Settings</span>
+<div class="bottom-nav">
+  <div><img src="../../assets/music.svg" alt="icon" /><span>Home</span></div>
+  <div><img src="../../assets/search.svg" alt="icon" /><span>Search</span></div>
+  <div>
+    <img src="../../assets/setting.svg" alt="icon" /><span>Settings</span>
+  </div>
 </div>
