--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,6 +1,6 @@
 .searchInput {
   border-radius: 19px;
-  background: #292e4b;
+  background-color: #383b49;
   display: flex;
   justify-content: center;
   padding: 10px 20px;
