--- a/src/components/track/track.css
+++ b/src/components/track/track.css
@@ -4,4 +4,13 @@
 
 .track__image {
   height: 50px;
+  width: 50px;
+  border: 1px inset whitesmoke;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.button {
+  background-color: #383b49;
+  border: none;
 }
