--- a/src/components/settings-page/settings-page.html
+++ b/src/components/settings-page/settings-page.html
@@ -1,12 +1,21 @@
 <div class="app-layout">
-    <header class="header"><h2>Settings</h2></header>
-    <main>Settings</main>
-    <footer class="footer">
-        <nav class="bottom-nav">
-            <ul>
-    <li><a href="#"><img src="../../assets/music.svg" alt="icon" />Home</a></li>
-    <li><a href="#"><img src="../../assets/search.svg" alt="icon" />Search</a></li>
-    <li><a href="#"><img src="../../assets/setting.svg" alt="icon" />Settings</a></li>
-        </nav>
-    </footer>
+  <header class="header"><h2>Settings</h2></header>
+  <main>Settings</main>
+  <footer class="footer">
+    <nav class="bottom-nav">
+      <ul>
+        <li>
+          <a href="#"><img src="../../assets/music.svg" alt="icon" />Home</a>
+        </li>
+        <li>
+          <a href="#"><img src="../../assets/search.svg" alt="icon" />Search</a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="../../assets/setting.svg" alt="icon" />Settings</a
+          >
+        </li>
+      </ul>
+    </nav>
+  </footer>
 </div>
